js/src/tests/test262/built-ins/Error/isError/is-a-constructor.js
assert
.
sameValue
(
isConstructor
(
Error
.
isError
)
false
'
isConstructor
(
Error
.
isError
)
must
return
false
'
)
;
assert
.
throws
(
TypeError
function
(
)
{
new
Error
.
isError
(
)
;
}
)
;
reportCompare
(
0
0
)
;
